# harbour-finder

./: .gitignore  Cargo.toml  build.rs  harbour-finder.desktop  harbour-finder.pro
.github/workflows/: build.yml
qml/pages/: FirstPage.qml
rpm/: harbour-finder.spec
sailfishapp/: Cargo.toml
src/: lib.rs  main.rs  model.rs  process.rs
