[package]
name = "harbour-finder"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Search applications in Sailfish"
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg-desktop-entry = { git = "https://github.com/R1tschY/xdg-desktop-entry-rs.git", rev = "726e1542" }
qt5qml = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "063ea5a8" }
sailfishapp = { path = "sailfishapp" }
env_logger = "^0.8"
log = "^0.4"

[build-dependencies]
qobject-compiler = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "063ea5a8"}
qt5qml = { git = "https://github.com/R1tschY/qobject-rs.git", rev = "063ea5a8"}
pkg-config = "0.3"